--- a/index.html
+++ b/index.html
@@ -13,26 +13,25 @@
             --main-foreground: #3E000C;
             --second-foreground: #7C0B2B;
             --second-background: #D4DCCD;
-        }
+            }
         h1, h2, h3 {
         font-family: 'EB Garamond', serif;
-        }
+            }
         body {
             background-color: var(--main-background);
             foreground-color: var(--main-foreground);
             font-family: 'Slabo', serif;
-        }
+            }
         .navbar {
             background-color: var(--main-foreground) !important;
-        }
+            }
         footer{
             background-color: var(--second-foreground) !important;
-        }
-
-
-
-
-
+            color: white;
+            }
+        button {
+            background-color: var(--second-background) !important;
+            }
     </style>
 
 
@@ -41,7 +40,12 @@
 
 <body>
    <header>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark"
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <a class="navbar-brand" href="#"> Liana Valdez</a>
+        <button class= "navbar-toggler" type="button" data-toggle="collapse" data-target="navbarsExample04"
+            aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
    </header>
 
 
