--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,27 +35,51 @@
             background-color: var(--second-background) !important;
             }
     </style>
-
-
 </head>
 
 
 <body>
    <header>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-        <a class="navbar-brand" href="#"> Liana Valdez</a>
-        <button class= "navbar-toggler" type="button" data-toggle="collapse" data-target="navbarsExample04"
-            aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+            <a class="navbar-brand" href="#"> Liana Valdez</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04"
+                aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarsExample04">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About</a>"
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#projects">Projects</a>"
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>"
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    <h1>Liana Valdez: UX Designer</h1>
    </header>
 
+   <main>
+        <x-markdown2html src="intro.md" id="intro"></x-markdown2html>
+        <x-markdown2html src="about.md" id="about"></x-markdown2html>
+        <x-markdown2html src="projects.md" id="projects"></x-markdown2html>
+        <x-markdown2html src="contact.md" id="contact"></x-markdown2html>
+   </main>
 
-<footer>
-    &copy; Liana Valdez <x-fullyear></x-fullyear>
-</footer>
-<script src="customelement.js"></script>
-
+    <footer>
+        &copy; Liana Valdez <x-fullyear></x-fullyear>
+    </footer>
+    <script src="customelement.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
+    <script src="https://custom-element.pages.dev/custom-element.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
