--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <style>
         .text-box {
-            max-width: 500px;
+            width: 500px;
             background: #ffffff;
             margin-left: 100px;
             padding: 25px;
@@ -31,7 +31,8 @@
             font-family: 'EB Garamond', serif; 
             color: white;
             }
-        body {
+        body, html {
+            height: 100%;
             background-color: var(--main-background);
             foreground-color: var(--main-foreground);
             font-family: 'Slabo', serif;
@@ -47,6 +48,12 @@
             background-color: var(--second-background) !important;
             }
         .banner {
+            background-image: url('https://lh3.googleusercontent.com/pw/ADCreHc-QgoI4ZIf3_a388uTkb9nW3Hj-KK5HNah2wB80rXeiumso5PpMy5pbL0wvIu4WLT4gxOLNYLX2P8OeA10iFyiRAskxfZsCNnUCiVv_aDgD9xTiw=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/pw/ADCreHc-QgoI4ZIf3_a388uTkb9nW3Hj-KK5HNah2wB80rXeiumso5PpMy5pbL0wvIu4WLT4gxOLNYLX2P8OeA10iFyiRAskxfZsCNnUCiVv_aDgD9xTiw=w600-h315-p-k');
+            height: 100%;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-postion: center;
+            position: relative;
 
             }
     </style>
@@ -78,10 +85,9 @@
         </nav>
    </header>
 
-   <main>
-        <div class="banner">
-            <x-markdown2html src="banner.md" id="banner"></x-markdown2html>
-        </div>
+   <div class="banner"></div>
+
+   <main>     
         <br>
         <div class="text-box">
             <x-markdown2html src="intro.md" id="intro"></x-markdown2html>
