--- a/index.html
+++ b/index.html
@@ -10,19 +10,24 @@
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@500&family=Slabo+27px&display=swap" rel="stylesheet">
 
     <style>
-        .text-box {
-            width: 500px;
+        .text-box-left {
+            width: 600px;
+            height: 350px;
             background: #ffffff;
-            margin-left: 100px;
             padding: 25px;
-            border-style: dashed;
+            border-radius: 20px;
+            margin-left: 100px;
+            margin-bottom: 50px;
         }
-        :root {
-            --main-background: #000000;
-            --main-foreground: #3E000C;
-            --second-foreground: #7C0B2B;
-            --second-background: #D4DCCD;
-            }
+        .text-box-right {
+            width: 50%;
+            height: 50%;
+            background: #ffffff;
+            padding: 25px;
+            border-radius: 20px;
+            margin-left: 500px;
+            margin-bottom: 50px;
+        }
         h1 {
             font-family: 'EB Garamond', serif; 
             color: black;
@@ -33,36 +38,41 @@
             }
         body, html {
             height: 100%;
-            background-color: var(--main-background);
-            foreground-color: var(--main-foreground);
+            background-color: black;
+            foreground-color: white;
             font-family: 'Slabo', serif;
             }
         .navbar {
-            background-color: var(--main-foreground) !important;
+            background-color: black !important;
+            foreground-color: white !important;
             }
         footer{
-            background-color: var(--second-foreground) !important;
-            color: white;
+            background-color: black !important;
+            foreground-color: white !important;
             }
         button {
-            background-color: var(--second-background) !important;
+            background-color: #f57890 !important;
             }
         .banner {
             background-image: url('https://lh3.googleusercontent.com/pw/ADCreHc-QgoI4ZIf3_a388uTkb9nW3Hj-KK5HNah2wB80rXeiumso5PpMy5pbL0wvIu4WLT4gxOLNYLX2P8OeA10iFyiRAskxfZsCNnUCiVv_aDgD9xTiw=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/pw/ADCreHc-QgoI4ZIf3_a388uTkb9nW3Hj-KK5HNah2wB80rXeiumso5PpMy5pbL0wvIu4WLT4gxOLNYLX2P8OeA10iFyiRAskxfZsCNnUCiVv_aDgD9xTiw=w600-h315-p-k');
-            height: 100%;
+            height: 50%;
             background-repeat: no-repeat;
-            background-attachment: fixed;
             background-postion: center;
+            background-size: cover;
             position: relative;
-
+            }
+        .nav-link {
+            foreground-color: white !important;
+            color: white !important;
             }
     </style>
 </head>
 
-
 <body>
-   <header>
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <div class="banner"></div>
+    <header>
+
+        <nav class="navbar navbar-expand-md navbar-dark">
             <a class="navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04"
                 aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
@@ -83,25 +93,23 @@
                 </ul>
             </div>
         </nav>
-   </header>
-
-   <div class="banner"></div>
+    </header>
 
    <main>     
         <br>
-        <div class="text-box">
+        <div class="text-box-left">
             <x-markdown2html src="intro.md" id="intro"></x-markdown2html>
         </div>
         <br>
-        <div class="text-box">
+        <div class="text-box-right">
             <x-markdown2html src="about.md" id="about"></x-markdown2html>
         </div>
         <br>
-        <div class="text-box">    
+        <div class="text-box-left">    
             <x-markdown2html src="projects.md" id="projects"></x-markdown2html>
         </div>
         <br>
-        <div class="text-box">    
+        <div class="text-box-right">    
             <x-markdown2html src="contact.md" id="contact"></x-markdown2html>
         </div>
    </main>
