--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@500&family=Slabo+27px&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Afacad:wght@500&display=swap" rel="stylesheet">
 
     <style>
-        .text-box-left {
+        .text-box-one {
             width: 600px;
             height: 350px;
             background: #ffffff;
@@ -19,8 +19,26 @@
             margin-left: 100px;
             margin-bottom: 50px;
         }
-        .text-box-right {
-            width: 50%;
+        .text-box-two {
+            width: 600px;
+            height: 450px;
+            background: #ffffff;
+            padding: 25px;
+            border-radius: 20px;
+            margin-left: 500px;
+            margin-bottom: 50px;
+        }
+        .text-box-three {
+            width: 600px;
+            height: 600px;
+            background: #ffffff;
+            padding: 25px;
+            border-radius: 20px;
+            margin-left: 100px;
+            margin-bottom: 50px;
+        }
+        .text-box-four {
+            width: 600px;
             height: 50%;
             background: #ffffff;
             padding: 25px;
@@ -29,29 +47,29 @@
             margin-bottom: 50px;
         }
         h1 {
-            font-family: 'EB Garamond', serif; 
+            font-family: 'Afacad', sans-serif;
             color: black;
             }
         h2 {
-            font-family: 'EB Garamond', serif; 
+            font-family: 'Afacad', sans-serif;
             color: white;
             }
         body, html {
             height: 100%;
             background-color: black;
             foreground-color: white;
-            font-family: 'Slabo', serif;
+            font-family: 'Afacad', sans-serif;
             }
         .navbar {
-            background-color: black !important;
-            foreground-color: white !important;
+            background-color: black;
+            foreground-color: white;
             }
         footer{
-            background-color: black !important;
-            foreground-color: white !important;
+            background-color: black;
+            color: white;
             }
         button {
-            background-color: #f57890 !important;
+            background-color: #f57890;
             }
         .banner {
             background-image: url('https://lh3.googleusercontent.com/pw/ADCreHc-QgoI4ZIf3_a388uTkb9nW3Hj-KK5HNah2wB80rXeiumso5PpMy5pbL0wvIu4WLT4gxOLNYLX2P8OeA10iFyiRAskxfZsCNnUCiVv_aDgD9xTiw=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/pw/ADCreHc-QgoI4ZIf3_a388uTkb9nW3Hj-KK5HNah2wB80rXeiumso5PpMy5pbL0wvIu4WLT4gxOLNYLX2P8OeA10iFyiRAskxfZsCNnUCiVv_aDgD9xTiw=w600-h315-p-k');
@@ -97,19 +115,19 @@
 
    <main>     
         <br>
-        <div class="text-box-left">
+        <div class="text-box-one">
             <x-markdown2html src="intro.md" id="intro"></x-markdown2html>
         </div>
         <br>
-        <div class="text-box-right">
+        <div class="text-box-two">
             <x-markdown2html src="about.md" id="about"></x-markdown2html>
         </div>
         <br>
-        <div class="text-box-left">    
+        <div class="text-box-three">    
             <x-markdown2html src="projects.md" id="projects"></x-markdown2html>
         </div>
         <br>
-        <div class="text-box-right">    
+        <div class="text-box-four">    
             <x-markdown2html src="contact.md" id="contact"></x-markdown2html>
         </div>
    </main>
