--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         }
         .text-box-four {
             width: 600px;
-            height: 50%;
+            height: 175px;
             background: #ffffff;
             padding: 25px;
             border-radius: 20px;
@@ -89,7 +89,6 @@
 <body>
     <div class="banner"></div>
     <header>
-
         <nav class="navbar navbar-expand-md navbar-dark">
             <a class="navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04"
